# pyoptools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  Plan  Plan.txt  README.md  Rotations-test.ipynb  Structure  Terminal Installation  Terminal documentation  Tutorial.0.ipynb  Tutorial.1.ipynb  Untitled.ipynb  Wave_propagation.ipynb  autopep8_cython.py  calc.html  clean.py  debian8_notes  extensions.py  ez_setup.py  gls2rtgd.py  ipyoptools  logger.ini  parallel.sh  prueba  pyoptools_env.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.py  template.py  tests.py  tox.ini  (+4 more)
pyoptools/: __init__.py  all.py  setup.cfg
pyoptools/gui/: __init__.py  events.py  glplotframe.py  glplotframe2.py  ipynbplotutils.py  ipynbplotutils.txt  ipywidgets.py  logutils.py  oglWindow.wxg  oglframe.py  plot_frame.py  plotutils.py  wxrayos.py  wxrayos.wxg
pyoptools/misc/: __init__.py
pyoptools/misc/GS/: __init__.py  gs.py
pyoptools/misc/Poly1Drot/: Poly1Drot.pyx  __init__.py
pyoptools/misc/Poly2D/: Poly2D.pxd  Poly2D.pyx  __init__.py
pyoptools/misc/cmisc/: __init__.py  cmisc.pxd  cmisc.pxd.old  cmisc.pyx  cmisc.pyx.old  eigen.pxd  eigen.pyx  linalg.pxd  linalg.pyx
pyoptools/misc/definitions/: __init__.py  definitions.pyx
pyoptools/misc/frft/: __init__.py  frft.py
pyoptools/misc/function_2d/: __init__.py  function_2d.pxd  function_2d.pyx
pyoptools/misc/function_2d/poly_2d/: __init__.py  poly_2d.pxd  poly_2d.pyx
pyoptools/misc/function_2d/poly_r/: __init__.py  poly_r.pxd  poly_r.pyx  poly_r_deriv.pxd  poly_r_deriv.pyx
pyoptools/misc/lsq/: __init__.py  lsq.pyx
pyoptools/misc/picklable/: __init__.py  picklable.pxd  picklable.pyx
pyoptools/misc/plist/: __init__.py  plist.pxd  plist.pyx
pyoptools/misc/pmisc/: __init__.py  misc.py
pyoptools/misc/poly_2d/: __init__.py  poly_2d.pxd  poly_2d.pyx
pyoptools/misc/resources/: __init__.py  resources.pyx
pyoptools/paraxial/: __init__.py  systemp.py
pyoptools/raytrace/: __init__.py  comp_lib.py
pyoptools/raytrace/_comp_lib/: __init__.py  aspheric_lens.py  ccd.py  compound_lens.py  cube.py  cylindrical_lens.py  diffraction.py  ideallens.py  mirror.py  optic_factory.py  powell_lens.py  prism.py  spherical_lens.py  stop.py
pyoptools/raytrace/calc/: __init__.py  calc.py
pyoptools/raytrace/component/: __init__.py  component.pxd  component.pyx
pyoptools/raytrace/mat_lib/: __init__.py  mat_eq.py  material.py
pyoptools/raytrace/mat_lib/data/: aliases.cfg  aliases.json  corning.mat  corning.rtgl  hoya.mat  hoya.rtgl  hoya_obs.mat  hoya_obs.rtgl  hoya_old.mat  hoya_old.rtgl  misc.mat  obsolete.mat  obsolete.rtgl  ohara.mat  ohara.rtgl  ohara_530.mat  ohara_530.rtgl  permission.txt  schott.mat  schott.rtgl  schott_2000.mat  schott_2000.rtgl  schott_2015.mat  schott_2015.rtgl  schott_530.mat  schott_530.rtgl  shared.rtgl  sumita.mat  sumita.rtgl
pyoptools/raytrace/mat_lib/data/glass/ami/: AMTIR-1.yml  AMTIR-2.yml  AMTIR-3.yml  AMTIR-6.yml
pyoptools/raytrace/mat_lib/data/glass/barberini/: D0082.yml  D0191.yml  D0290.yml  D0391.yml  D0587.yml  D0687.yml  D0785.yml  D0888.yml  D0891.yml  D0991.yml  D1125.yml  D1214.yml  D1219.yml  D1230.yml  D1420_1.yml  D1426-D1526.yml  D1511.yml  D1520.yml  D1616.yml  D4150.yml  D5336_1.yml  D6117.yml  D6420.yml  D6526-D6626.yml  D6625.yml  D6726-D6826.yml  (+1 more)
pyoptools/raytrace/ray/: __init__.py  ray.pxd  ray.pyx  ray_source.py
pyoptools/raytrace/shape/: __init__.py  circular.pxd  circular.pyx  polygon.pxd  polygon.pyx  rectangular.pxd  rectangular.pyx  shape.pxd  shape.pyx  triangular.pxd  triangular.pyx
pyoptools/raytrace/surface/: __init__.py  aperture.pyx  aspherical.pyx  cylinder.pyx  cylindrical.pyx  detector.pyx  idealpplanes.pyx  idealsurface.pyx  plane.pxd  plane.pyx  plane_mask.pyx  poly_expansion.py  powell.pyx  spherical.pyx  surface.pxd  surface.pyx  taylor_poly.pyx
pyoptools/raytrace/system/: __init__.py  idealcomponent.pyx  system.pxd  system.pyx
pyoptools/tests/: test_calc.py  test_coding_standards.py  test_components.py  test_shapes.py
pyoptools/wavefront/: __init__.py
pyoptools/wavefront/calc/: __init__.py  gs.py
pyoptools/wavefront/cpsurfrep/: __init__.py  cpsurfrep.pyx
pyoptools/wavefront/field/: __init__.py  field.pyx  fields.pyx
pyoptools/wavefront/psurfrep/: __init__.py  psurfrep.pyx
pyoptools/wavefront/zernike/: __init__.py  zernike.py
(+2847 files in other folders)
