[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=8",
    "wheel",
    "Cython==3.0.11",
    "oldest-supported-numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyoptools"
dynamic = ["version"]
description = "Python tools for simulation of optical systems"
authors = [{ name = "Ricardo Amézquita Orozco", email = "ramezquitao@cihologramas.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
dependencies = [
    "numpy==1.19.3; python_version=='3.8'",
    "numpy==1.26.2; python_version=='3.9'",
    "numpy==1.26.2; python_version=='3.10'",
    "numpy==1.24.2; python_version=='3.11'",
    "scipy>=1.5.2",
    "imageio>=2.9.0",
    "PyYAML>=5.3.1",
    "matplotlib>=3.3.1",
    "ijson>=3.1.3",
    "Pillow>=10.0.1",
    "jupyterlab>=3.0.0",
    "ipython>=7.19.0",
    "pythreejs>=2.2.0",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pep8>=1.7.1",
    "sphinxcontrib-apidoc>=0.3.0",
    "mako>=1.1.3",
    "ipykernel>=5.3.4",
    "nbformat>=5.0.8",
    "sphinx>=3.2.1",
    "nbsphinx>=0.8.0",
    "importlib-resources>=3.3.0"
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.cython]
directive = {language_level = "3"}

[tool.cython-lint]
max-line-length = 88
ignore = ["E741"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]