[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=8",
    "wheel",
    "Cython==3.0.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyoptools"
dynamic = ["version"]
description = "Python tools for simulation of optical systems"
authors = [{ name = "Ricardo Amézquita Orozco", email = "ramezquitao@cihologramas.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.5.2",
    "imageio>=2.9.0",
    "PyYAML>=5.3.1",
    "matplotlib>=3.3.1",
    
    "orjson>=3.10.7",
    "Pillow>=10.0.1",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pep8>=1.7.1",
    "importlib-resources>=3.3.0"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.cython]
directive = {language_level = "3"}

[tool.cython-lint]
max-line-length = 88
ignore = ["E741"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "linting: Python and Cython linting test",
]