[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=8",
    "wheel",
    "Cython==0.29.32",
    "oldest-supported-numpy"
    ]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = "pyoptools/_version.py"

[project]
name = "pyoptools"
dynamic = ["version"]
description = "Python tools for simulation of optical systems"
authors = [{ name = "Ricardo Amézquita Orozco", email = "ramezquitao@cihologramas.com" }]
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
    "numpy==2.1.0",
    "scipy==1.14.0",
    "imageio>=2.35.0",
    "PyYAML>=6.0.2",
    "matplotlib>=3.9.2",
    "ijson>=3.3.0",
    "Pillow>=10.4.0",
    "jupyterlab>=4.2.5",
    "ipython>=8.28.0",
    "pythreejs>=2.4.2",
    "pytest>=8.3.3",
    "pycodestyle>=2.11.0",
    "sphinxcontrib-apidoc>=0.5.0",
    "mako>=1.3.1",
    "ipykernel>=6.25.1",
    "nbformat>=5.9.1",
    "sphinx>=7.4.5",
    "nbsphinx>=0.9.4",
    "importlib-resources>=6.2.1",
]
