[metadata]
name = pyoptools
author = Ricardo Amezquita Orozco
author_email = ramezquitao@cihologramas.com
description = Optical ray tracing simulation system
url = https://github.com/cihologramas/pyoptools/

[options]
packages = find:
#scripts = ipyoptools
use_scm_version = True

[options.package_data]
pyoptools.raytrace.mat_lib = 
    data/glass/*
    data/glass/*/*
    data/glass/*/*/*
    data/inorganic/*
    data/inorganic/*/*
    data/organic/*
    data/organic/*/*
    data/organic/*/* 
    data/aliases.json
pyoptools.raytrace.library = 
    catalogs/*

[options.extras_require]
# If you have extra dependencies, you can add them here.

[options.packages.find]
exclude = 
    tests
